--- a/playbooks/roles/iperf/files/iperf-client-python/pod-deployment-antiafinity.yaml
+++ b/playbooks/roles/iperf/files/iperf-client-python/pod-deployment-antiafinity.yaml
@@ -25,7 +25,7 @@ spec:
             topologyKey: kubernetes.io/hostname
       containers:
         - name: iperf3-client
-          image: magreenb/mgop:202003191152
+          image: quay.io/ypery/iperf3-client-python
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
