--- a/playbooks/roles/iperf/files/iperf-client-python/Dockerfile
+++ b/playbooks/roles/iperf/files/iperf-client-python/Dockerfile
@@ -1,5 +1,5 @@
-FROM centos:8
-MAINTAINER Michael Greenberg
+FROM registry.redhat.io/ubi8
+MAINTAINER Yaron Perry
 
 RUN  useradd iperf && yum update -y && yum install -y iperf3 python3 && yum clean all
 USER iperf
@@ -8,3 +8,4 @@ COPY iperfcon.py /home/iperf/
 EXPOSE 8080
 
 CMD ["python3", "/home/iperf/iperfcon.py"]
+
